# MetaAdsCollector

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  example.py  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: api-reference.md  architecture.md  async.md  cli.md  contributing.md  deduplication.md  events.md  filtering.md  media.md  proxy.md  quickstart.md
examples/: basic_usage.py
meta_ads_collector/: __init__.py  __main__.py  async_client.py  async_collector.py  cli.py  client.py  collector.py  constants.py  dedup.py  events.py  exceptions.py  filters.py  fingerprint.py  logging_config.py  media.py  models.py  proxy_pool.py  reporting.py  url_parser.py  webhooks.py
tests/: conftest.py  test_async_client.py  test_async_collector.py  test_cli.py  test_client.py  test_collector.py  test_dedup.py  test_doc_ids.py  test_edge_cases.py  test_enrich_deepcopy.py  test_enrichment.py  test_events.py  test_exceptions.py  test_exports.py  test_filters.py  test_fingerprint.py  test_integration_core.py  test_integration_features.py  test_live_api_format.py  test_logging_config.py  test_media.py  test_media_integration.py  test_models.py  test_page_search.py  test_proxy_pool.py  test_reporting.py  test_session_refresh.py  test_stream.py  test_token_verification.py  test_url_parser.py  test_wave2_fixes.py  test_wave3_fixes.py  test_webhooks.py  utils.py
