[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ads-collector"
version = "1.0.0"
description = "Collect ads from the Meta (Facebook) Ad Library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Yossef" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-requests",
]

[project.scripts]
meta-ads-collector = "meta_ads_collector.cli:main"

[project.urls]
Homepage = "https://github.com/Yossef/meta-ads-collector"
Repository = "https://github.com/Yossef/meta-ads-collector"
Issues = "https://github.com/Yossef/meta-ads-collector/issues"

[tool.setuptools.packages.find]
include = ["meta_ads_collector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
